--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <ul id="messages"></ul>
     <form id="form">
       <input id="input" placeholder="メッセージを入力..." autocomplete="off" />
+      <input id="imageInput" type="file" accept="image/*" />
       <button>送信</button>
     </form>
   </div>
