--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
-  <title>マイクラ用雑談</title>
+  <title>マイクラ</title>
   <link rel="stylesheet" href="/styles.css" />
   <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
   <script src="/client.js" defer></script>
