--- a/public/index.html
+++ b/public/index.html
@@ -30,5 +30,11 @@
       window.open("https://sfu.mirotalk.com/join/?room=maikurakekennkani", "_blank");
     });
   </script>
+ <!-- 追加したボタンたち -->
+    <div class="actions">
+      <button onclick="location.href='https://sfu.mirotalk.com/join/?room=maikurakekennkani'">通話</button>
+      <button onclick="location.href='https://www.youtube.com/'">YouTube</button>
+      <button onclick="location.href='https://teach.ideas.panozzogroup.com/'">プロキシ</button>
+    </div>
 </body>
 </html>
